--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,18 @@
 {
   "manifest_version": 3,
-  "name": "9:14 Popup Extension",
+  "name": "Twins",
   "version": "1.0",
   "description": "A Chrome extension that shows a popup with a 9:14 ratio.",
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "icon.png",
-      "48": "icon.png",
-      "128": "icon.png"
+      "48": "icon-48.png",
+      "32": "icon-32.png",
+      "128": "icon-128.png"
     }
   },
   "permissions": [],
+  "omnibox": { "keyword": "Twins" },
   "background": {
     "service_worker": "background.js"
   }
